--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,7 +2,7 @@ body {
     height:100vh;
     width:100%;
     margin:0;
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #eeeb4a, #23d5ab);
     animation: gradientBG 15s ease infinite;
     background-size: 400% 400%;
 }
@@ -47,3 +47,5 @@ img {
     text-align:center;
     top:15%;
 }
+
+
